Added all crud front and back -end features (finnaly) and some minor fixes